# rustbasic-permission

./: Cargo.toml  README.md  build.rs
src/: checker.rs  lib.rs  migration.rs  scaffolding.rs  service.rs
src/entities/: mod.rs  model_has_permissions.rs  model_has_roles.rs  permissions.rs  role_has_permissions.rs  roles.rs
