[package]
name = "rustbasic-permission"
version = "0.0.5"
edition = "2024"
build = "build.rs"
description = "Role and Permission management package for the RustBasic Framework."
license = "MIT"
repository = "https://github.com/herisvan321/rustbasic-permission"
readme = "README.md"
keywords = ["web", "framework", "permission", "rbac"]
categories = ["authentication", "web-programming"]

[lib]
name = "rustbasic_permission"
path = "src/lib.rs"

[dependencies]
rustbasic-core = "0.1.4"
sea-orm = { version = "1.1.4", features = ["macros", "with-chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.52.1", features = ["full"] }
axum = "0.8.9"
async-trait = "0.1.86"
tracing = "0.1.44"
colored = "3.0.0"
chrono = "0.4.39"

[build-dependencies]
chrono = "0.4.39"

[[bin]]
name = "rustbasic-permission"
path = "src/bin/permission.rs"
