[package]
name = "rustbasic-permission"
version = "0.0.12"
edition = "2024"
build = "build.rs"
description = "Role and Permission management package for the RustBasic Framework."
license = "MIT"
repository = "https://github.com/herisvan321/rustbasic-permission"
readme = "README.md"
keywords = ["web", "framework", "permission", "rbac"]
categories = ["authentication", "web-programming"]

[lib]
name = "rustbasic_permission"
path = "src/lib.rs"

[dependencies]
rustbasic-core = "0.0"

[build-dependencies]

[[bin]]
name = "rustbasic-permission"
path = "src/bin/permission.rs"
